--- a/src/Pages/Public/About/About.css
+++ b/src/Pages/Public/About/About.css
@@ -332,5 +332,32 @@
     height: 100%;
     border: 0;
   }
+  .about-contact {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  
+  @media (min-width: 768px) {
+    .about-contact {
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: flex-start;
+    }
+  
+    .about-contact .contact-info {
+      width: 55%;
+    }
+  
+    .about-contact .map-wrapper {
+      width: 40%;
+    }
+  
+    .about-contact .map-wrapper iframe {
+      width: 100%;
+      height: 300px;
+    }
+  }
+  
   
   
