--- a/src/Pages/Public/Components/Footer/Footer.css
+++ b/src/Pages/Public/Components/Footer/Footer.css
@@ -38,9 +38,16 @@
 }
 
 .footer-logo-img {
-  width: 40px;
-  height: 40px;
-  margin-right: 10px;
+ 
+    /*height: 2.5rem;
+    margin-right: 0.75rem;*/
+    width: 40px;       /* or any desired size */
+    height: 40px;
+    border-radius: 50%;
+    object-fit: cover;  /* Ensures it fills the circle without distortion */
+    border: 0px solid #fff; /* Optional: adds a border around the circle */
+    box-shadow: 0 0 5px rgba(0,0,0,0.1);
+  
 }
 
 .footer-logo h3 {
