corrented the flex for the nav links

--- a/src/Pages/Public/HomePage/Navbar.css
+++ b/src/Pages/Public/HomePage/Navbar.css
@@ -108,7 +108,8 @@
 .navbar-center {
   flex: 1;
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
+  padding: 1rem;
 }
 
 .navbar-links {
