--- a/src/Pages/Public/HomePage/Navbar.css
+++ b/src/Pages/Public/HomePage/Navbar.css
@@ -109,7 +109,7 @@
   flex: 1;
   display: flex;
   justify-content: flex-end;
-  padding: 1rem;
+  padding: 0;
 }
 
 .navbar-links {
@@ -327,7 +327,7 @@
   
   .navbar-brand {
     font-size: 1.25rem;
-    max-width: 150px;
+    /* max-width: 150px; */
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -409,7 +409,7 @@
   
   .navbar-brand {
     font-size: 1.1rem;
-    max-width: 120px;
+    /* max-width: 120px; */
   }
   
   .navbar-links {
