muzaffarpur new map added, footer design changes, navbar login button margin-left added.

--- a/src/Pages/Public/About/About.css
+++ b/src/Pages/Public/About/About.css
@@ -2,7 +2,7 @@
 .about-page {
     width: 100%;
     font-family: 'Roboto', sans-serif;
-    background: #f6f5f5;
+    background: white;
     animation: fadeInPage 1.2s ease-out forwards;
 
     position: relative;
